@@ -22,7 +22,7 @@ include ../Makefile.root
 LINKEDFILES=misc.c freelist.c major_gc.c minor_gc.c memory.c alloc.c array.c \
   compare.c ints.c floats.c str.c io.c extern.c intern.c hash.c sys.c \
   parsing.c gc_ctrl.c terminfo.c md5.c obj.c lexing.c printexc.c callback.c \
-  weak.c compact.c finalise.c meta.c custom.c main.c globroots.c \
+  weak.c compact.c finalise.c meta.c custom.c main.c globroots.c cplugins.c \
   $(UNIX_OR_WIN32).c dynlink.c signals.c debugger.c startup_aux.c \
   backtrace.c afl.c
 
@@ -79,7 +79,7 @@ COBJS=startup_aux.$(O) startup.$(O) main.$(O) fail.$(O)		\
   terminfo.$(O) md5.$(O) obj.$(O) lexing.$(O) $(UNIX_OR_WIN32).$(O)	\
   printexc.$(O) callback.$(O) weak.$(O) compact.$(O) finalise.$(O)	\
   custom.$(O) globroots.$(O) backtrace_prim.$(O) backtrace.$(O)		\
-  natdynlink.$(O) debugger.$(O) meta.$(O) dynlink.$(O)			\
+  natdynlink.$(O) debugger.$(O) meta.$(O) dynlink.$(O) cplugins.$(O)    \
   clambda_checks.$(O) spacetime.$(O) spacetime_snapshot.$(O)		\
   spacetime_offline.$(O) afl.$(O) \
   $(OCPWIN_OBJS) $(MEMPROF_OBJS)
