@@ -69,10 +69,6 @@ int caml_major_ring_index;
 double caml_major_work_credit;
 extern double caml_gc_clock;
 
-/* [caml_major_gc_hook] is called just between the end of the mark
-   phase and the beginning of the sweep phase of the major GC */
-CAMLextern void (*caml_major_gc_hook)(void);
-
 void caml_init_major_heap (asize_t);           /* size in bytes */
 asize_t caml_clip_heap_chunk_wsz (asize_t wsz);
 void caml_darken (value, value *);
