@@ -23,13 +23,6 @@
 #include "caml/memory.h"
 #include "caml/version.h"
 
-caml_timing_hook caml_major_slice_begin_hook = NULL;
-caml_timing_hook caml_major_slice_end_hook = NULL;
-caml_timing_hook caml_minor_gc_begin_hook = NULL;
-caml_timing_hook caml_minor_gc_end_hook = NULL;
-caml_timing_hook caml_finalise_begin_hook = NULL;
-caml_timing_hook caml_finalise_end_hook = NULL;
-
 #ifdef DEBUG
 
 int caml_failed_assert (char * expr, char * file, int line)
