@@ -565,73 +565,3 @@ CAMLprim value caml_sys_isatty(value chan)
 
   return ret;
 }
-
-/* Load dynamic plugins indicated in the CAML_CPLUGINS environment
-   variable. These plugins can be used to set currently existing
-   hooks, such as GC hooks and system calls tracing (see misc.h).
- */
-
-#ifdef CAML_WITH_CPLUGINS
-
-value (*caml_cplugins_prim)(int,value,value,value) = NULL;
-
-#define DLL_EXECUTABLE 1
-#define DLL_NOT_GLOBAL 0
-
-static struct cplugin_context cplugin_context;
-
-void caml_load_plugin(char *plugin)
-{
-  void* dll_handle = NULL;
-
-  dll_handle = caml_dlopen(plugin, DLL_EXECUTABLE, DLL_NOT_GLOBAL);
-  if( dll_handle != NULL ){
-   void (* dll_init)(struct cplugin_context*) =
-     caml_dlsym(dll_handle, "caml_cplugin_init");
-   if( dll_init != NULL ){
-     cplugin_context.plugin=plugin;
-     dll_init(&cplugin_context);
-   } else {
-     caml_dlclose(dll_handle);
-   }
-  } else {
-   fprintf(stderr, "Cannot load C plugin %s\nReason: %s\n",
-          plugin, caml_dlerror());
-  }
-}
-
-void caml_cplugins_load(char *env_variable)
-{
-  char *plugins = getenv(env_variable);
-  if(plugins != NULL){
-    char* curs = plugins;
-    while(*curs != 0){
-        if(*curs == ','){
-          if(curs > plugins){
-            *curs = 0;
-            caml_load_plugin(plugins);
-          }
-          plugins = curs+1;
-        }
-        curs++;
-    }
-    if(curs > plugins) caml_load_plugin(plugins);
-  }
-}
-
-void caml_cplugins_init(char * exe_name, char **argv)
-{
-  cplugin_context.api_version = CAML_CPLUGIN_CONTEXT_API;
-  cplugin_context.prims_bitmap = CAML_CPLUGINS_PRIMS_BITMAP;
-  cplugin_context.exe_name = exe_name;
-  cplugin_context.argv = argv;
-  cplugin_context.ocaml_version = OCAML_VERSION_STRING;
-  caml_cplugins_load("CAML_CPLUGINS");
-#ifdef NATIVE_CODE
-  caml_cplugins_load("CAML_NATIVE_CPLUGINS");
-#else
-  caml_cplugins_load("CAML_BYTE_CPLUGINS");
-#endif
-}
-
-#endif /* CAML_WITH_CPLUGINS */
